# Real-Time-Immutable-Encryptions

./: .gitignore  Cargo.toml  ENHANCEMENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci-cd-debug.yml  ci-cd-fixed.yml  ci-cd-ultimate.yml  ci-cd.yml
docker/: docker-compose.monitoring.yml  docker-compose.yml  python-api.Dockerfile  rust-backend.Dockerfile  streamlit.Dockerfile
integration-tests/: test_integration.py
python_api/: README.md  ai_analyzer.py  main.py
python_api/streamlit/: README.md  app.py
scripts/: deploy.sh
src/: App.tsx  index.css  lib.rs  main.rs  theme.ts
src-native/: native-crypto-system.js
src/components/: EncryptionDisplay.tsx  Terminal.tsx  VerificationDisplay.tsx
src/crypto/: BlockchainAnchor.ts  CryptoEngine.ts  ImmutableEncryption.ts  lib.rs
src/lib/: blockchain.rs  config.rs  crypto.rs  error.rs  quantum.rs  storage.rs  verification.rs  video.rs
tests/: crypto-test.rs
