[package]
name = "immutable-encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core cryptography
ring = "0.17"
blake3 = "1.5"
sha2 = "0.10"
hmac = "0.12"

# Video processing (optional)
opencv = { version = "0.88", optional = true }
ffmpeg-next = { version = "6.0", optional = true }
image = { version = "0.24", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.10"
prost = "0.12"

# Blockchain and crypto
ethers = "2.0"
bitcoin = "0.31"
hex = "0.4"

# Database
rocksdb = "0.21"

# Quantum-resistant cryptography (post-quantum)
pqcrypto = "0.17"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Hardware security
tss = "0.2"

# Metrics
prometheus = "0.13"
async-trait = "0.1.89"
toml = "0.8"
warp = "0.3"

[features]
default = []
video = ["opencv", "ffmpeg-next", "image"]

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "encryption-node"
path = "src/bin/encryption_node.rs"

[[bin]]
name = "verification-client"
path = "src/bin/verification_client.rs"

[[bin]]
name = "blockchain-anchor"
path = "src/bin/blockchain_anchor.rs"

[lib]
name = "immutable_encryption"
path = "src/lib.rs"
